--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               {% if user.is_staff %}
-              <li><a href="#">Reports</a></li>  {# TODO reinstate this #}
+              <li><a href="{% url 'reports:index' %}">Reports</a></li>
               {% endif %}
               {% if user.is_authenticated %}
               <li><a href="{% url 'logout' %}">Sign out</a></li>
