--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -9,6 +9,7 @@
 <!--     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}" /> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="http://2018.pyconuk.org/static/css/pyconuk.css">
+  <link rel="stylesheet" href="{% static 'tickets/tickets.css' %}" />
 
   <style media="screen">
 
