Require billing details (name + address) for all orders

--- a/tickets/templates/tickets/_order_form.html
+++ b/tickets/templates/tickets/_order_form.html
@@ -83,24 +83,24 @@
     </div>
   </div>
 
-  <div class="card" id="form-panel-company-details">
-    <div class="card-header">Company details</div>
+  <div class="card" id="form-panel-billing-details">
+    <div class="card-header">Billing details</div>
     <div class="card-body">
       <div class="row">
         <div class="col-4">
-          <label>Company name</label>
+          <label>Billing name</label>
         </div>
         <div class="col-6">
-          {{ company_details_form.company_name }}
+          {{ billing_details_form.billing_name }}
         </div>
       </div>
 
       <div class="row">
         <div class="col-4">
-          <label>Company address</label>
+          <label>Billing address</label>
         </div>
         <div class="col-6">
-          {{ company_details_form.company_addr }}
+          {{ billing_details_form.billing_addr }}
         </div>
       </div>
     </div>
