Include invoice number on receipt

--- a/tickets/templates/tickets/order_receipt.html
+++ b/tickets/templates/tickets/order_receipt.html
@@ -19,7 +19,7 @@
 
       <tr>
         <th>Invoice number</th>
-        <td>{{ order.id }}</td>
+        <td>{{ order.full_invoice_number }}</td>
       </tr>
 
       <tr>
