--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -3,45 +3,99 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}" />
-    <title>{{ title|default:"PyCon UK 2018 HQ" }}</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}" /> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="http://2018.pyconuk.org/static/css/pyconuk.css">
+  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}" />
+  <title>{{ title|default:"PyCon UK 2018 HQ" }}</title>
   </head>
   <body>
-    <div class="container">
-      {% if not no_navbar %}
-      <nav class="navbar navbar-default navbar-static-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">PyCon UK HQ</a>
-          </div>
 
-          <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              {% if user.is_staff %}
-              <li><a href="{% url 'reports:index' %}">Reports</a></li>
-              {% endif %}
-              {% if user.is_authenticated %}
-              <li><a href="{% url 'logout' %}">Sign out</a></li>
-              {% else %}
-              <li><a href="{% url 'login' %}?next={{ request.path }}">Sign in</a></li>
-              <li><a href="{% url 'register' %}?next={{ request.path }}">Sign up</a></li>
-              {% endif %}
-            </ul>
-          </div>
+    <div class="masthead">
+
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="/"><span>PyCon UK</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>Menu
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="nav navbar-nav">
+            <li class="nav-item child first">
+              <a href="/sponsorship/" class="nav-link">
+                Sponsorship
+              </a>
+            </li>
+            <li class="nav-item child">
+              <a href="/diversity-inclusion-accessibility/" class="nav-link">
+                Diversity, inclusion, accessibility
+              </a>
+            </li>
+            <li class="nav-item child">
+              <a href="/code-conduct/" class="nav-link">
+                Code of conduct
+              </a>
+            </li>
+            <li class="nav-item child last">
+              <a href="/contact/" class="nav-link">
+                Contact
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
-      {% endif %}
-      <div class="row">
+
+      <header>
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-3"><strong>Registration Office</strong></h1>
+            <p class="lead"></p>
+          </div>
+        </div>
+      </header>
+
+      <nav aria-label="breadcrumb" role="navigation" class="container">
+        <svg class="breadcrumb-python" xmlns="http://www.w3.org/2000/svg" width="55" height="82"><g fill="none" fill-rule="evenodd"><path fill="#ed1c24" fill-rule="nonzero" d="M54.4 12.1v12.6H27.6v57.2H1V14.6S-1.2 0 28 0c28.1 0 26.4 12.1 26.4 12.1z"></path><path fill="#FFF" d="M42.9 8.4a4.9 4.9 0 1 0 0 9.7 4.9 4.9 0 0 0 0-9.7z" class="blink"></path></g></svg>
+        <ol class="breadcrumb" style="background-color: #ed1c24">
+          <li class="breadcrumb-item">
+            <a href="/">PyCon UK 2018</a>
+          </li>
+          <li class="breadcrumb-item" aria-current="page">
+            <span>Code of conduct</span>
+
+            {% if user.is_staff %}
+            <span><a href="{% url 'reports:index' %}">Reports</a></span>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <span><a href="{% url 'logout' %}">Sign out</a></span>
+            {% else %}
+            <span><a href="{% url 'login' %}?next={{ request.path }}">Sign in</a></span>
+            <span><a href="{% url 'register' %}?next={{ request.path }}">Sign up</a></span>
+            {% endif %}
+          </li>
+        </ol>
+      </nav>
+    </div>
+
+
+    <main>
+      <div class="container">
+        {% if not no_navbar %}
+        <nav class="navbar navbar-default navbar-static-top">
+        <div class="container-fluid">
+
+
+          <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+
+          </ul>
+          </div>
+        </div>
+        </nav>
+        {% endif %}
+        <div class="row">
         <div class="col-md-12">
           {% for message in messages %}
           {% if message.tags == 'error' %}
@@ -51,15 +105,45 @@
           {% endif %}
           {% endfor %}
         </div>
-      </div>
-      <div class="row">
+        </div>
+        <div class="row">
         <div class="col-md-10 col-md-offset-1">
           {% block content %}
           {% endblock %}
         </div>
+        </div>
+        <hr />
       </div>
-      <hr />
-    </div>
+
+    </main>
+
+
+    <footer class="foot">
+      <div class="pyconuk">
+        <div class="thankyou">15th-19th September 2018</div>
+        <div class="circle">
+          <div class="python blue slueth right">
+            <div class="deerstalker"></div>
+            <div class="eye"></div>
+            <div class="moustache"></div>
+          </div>
+          <div class="python yellow queen right">
+      <div class="eye"></div>
+      <div class="crown">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.7 110.9"><title>crown</title><path d="M58.8,16.1a0.3,0.3,0,1,1-.3-0.4A0.4,0.4,0,0,1,58.8,16.1Z" transform="translate(-0.7 -0.7)" style="fill:#010101;fill-opacity:0"></path><path d="M64.8,0.7c-5,0-4.7,2.2-4.7,2.2V5.2h4.8V5.9H58.2S55,5.5,55,10.6s2.8,4.9,2.8,4.9h1.7V13.2a2.7,2.7,0,0,1,2.8-2.8H67a2.6,2.6,0,0,0,2.7-2.6V3.4S70,0.7,64.8.7h0ZM62.2,2.3a0.9,0.9,0,0,1,.9.9,0.9,0.9,0,1,1-1.7,0,0.9,0.9,0,0,1,.9-0.9h0Zm2.8,18.4c5,0,4.7-2.2,4.7-2.2V16.1H64.8V15.5h6.7s3.2,0.4,3.2-4.8S72,5.8,72,5.8H70.3V8.1A2.7,2.7,0,0,1,67.5,11H62.8a2.6,2.6,0,0,0-2.7,2.6V18s-0.4,2.7,4.8,2.7h0Zm2.6-1.5a0.9,0.9,0,0,1-.9-0.9,0.9,0.9,0,0,1,1.7,0,0.9,0.9,0,0,1-.9.9h0Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path><path d="M32,50.7C29.9,54.6,28,58,30.7,67c0,0-7.7-2.8-11.9,3.1s1,8.5,4.4,7.1c4.9-2.1,6-3.1,9.5.7,0.7,4.5.2,8.1-5.8,11.1,0,0-12.3,6.6-18.3-11.4l7.6,4.4L13,66.5,7,71l4.1-9.1L0.7,64.6s2.6,6.1,2.1,7.7-1.2,3.7-.7,5.5,2,3,3,3.9,2.4,7.1,2.7,8.2,1.6,6.2-.4,14.2l8.4,7.8s15.6-7.6,47.7-7.7H64c32.1,0.1,47.7,7.7,47.7,7.7l8.4-7.8c-2-7.9-1.7-12.1-1.5-13.1s2.6-8.3,3.7-9.2a9.2,9.2,0,0,0,3-4c0.4-1.7-.2-3.8-0.7-5.5s2.8-6.2,2.8-6.2l-9.2-2.7,1.9,8.8-5.2-4.7L111.5,80l7.3-2.6c-2.9,9-7,11.7-10.5,12.8s-6.7.6-8.2-.3c-6-4.1-6.4-6.5-5.6-10.2,1.5-7,5.4-3.6,9.7-.7,2.2,1.5,4.9-1.5,5.6-3.6s0.6-6.5-4-8.4-9.5,1.3-9.5,1.3c4.7-10.9-1-17.2-1-17.2-7.3,4.5-5.8,16.2-5.8,16.2s-2.8-4.6-7.3-4.3-6.5,3.8-5.5,7.1,2.6,4.9,5.1,3.8,6.7-1.7,6.2,5-6.8,7.4-10.1,7.4-7.1-3-14.2-3-8,2.8-13.8,3c-3.3,0-11-.7-11.5-7.8s5.9-7.9,7.7-4.8c3.9,1.6,5.8-1.2,5.9-3-0.7-4.7-2.7-7.1-6.5-7.3a8.4,8.4,0,0,0-6.6,2.3,15,15,0,0,0-6.5-15.4ZM80.1,64.9A1.2,1.2,0,1,1,79,66,1.2,1.2,0,0,1,80.1,64.9Zm-33.8,1h0.2a1.1,1.1,0,0,1,1.2,1,1.2,1.2,0,1,1-2.3,0,1.3,1.3,0,0,1,.8-1.2h0.1Zm60,3.3a1.2,1.2,0,1,1-1.2,1.2A1.2,1.2,0,0,1,106.4,69.2ZM21,70.3a1.2,1.2,0,1,1-1.2,1.2A1.2,1.2,0,0,1,21,70.3ZM4.3,74.8l2,1.8L5.5,79.1l-2-1.8Zm118.7,0,0.7,2.5-2,1.8-0.7-2.5ZM63.5,89.1l3.3,5.1-3.1,5.1-3.3-5.1Zm-12.9,1a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6A1.6,1.6,0,0,1,49,91.7,1.7,1.7,0,0,1,50.6,90h0Zm24.2,0a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.6,1.6,0,0,1-1.7-1.6A1.7,1.7,0,0,1,74.9,90h0Zm-36.8.6c3.3,0,6.1,1.7,6.4,4.1s-2.4,5.5-6.3,6.1-7.4-1.2-7.9-4,2.4-5.5,6.3-6.1h1.5Zm49.4,0h1.5c3.9,0.6,6.7,3.3,6.3,6.1s-4,4.5-7.9,4-6.7-3.4-6.3-6.1S84.2,90.8,87.5,90.8ZM22.1,95a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.7,1.7,0,0,1,0-3.4V95Zm81.3,0a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.7,1.7,0,0,1,0-3.4V95ZM51.6,97.1a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.6,1.6,0,0,1-1.7-1.6A1.7,1.7,0,0,1,51.6,97h0Zm22.5,0a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.6,1.6,0,0,1-1.7-1.6A1.7,1.7,0,0,1,74,97h0ZM11.4,98.6l3,2.7-1,3.9-3-2.7,1.2-3.9H11.4Zm104.5,0,1.2,3.9-3,2.7-1.2-3.9Zm-92.5,2.9a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.7,1.7,0,0,1,0-3.4v0.2Zm79,0a1.6,1.6,0,0,1,1.7,1.6,1.6,1.6,0,0,1-1.7,1.6,1.7,1.7,0,0,1,0-3.4v0.2Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path><path d="M15,62.2L13,60C35.1,41.1,54,39.6,54.8,39.6h1l0.4,0.8c3.7,6.7,4.5,14.8,4.5,15l-3,.3A41.1,41.1,0,0,0,54,42.6c-4.1.6-20.5,3.7-39.1,19.6h0Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path><ellipse cx="51.3" cy="35.4" rx="3.2" ry="3.1" style="fill:#010101"></ellipse><ellipse cx="43" cy="37.4" rx="3.1" ry="3" style="fill:#010101"></ellipse><ellipse cx="35.3" cy="40.3" rx="2.8" ry="2.7" style="fill:#010101"></ellipse><ellipse cx="28.5" cy="43.6" rx="2.6" ry="2.5" style="fill:#010101"></ellipse><ellipse cx="21.8" cy="47.8" rx="2.4" ry="2.3" style="fill:#010101"></ellipse><ellipse cx="15.8" cy="52.3" rx="2.2" ry="2.1" style="fill:#010101"></ellipse><ellipse cx="11.1" cy="56.8" rx="2" ry="1.9" style="fill:#010101"></ellipse><path d="M113.2,61.9l2-2.2C93.1,40.8,74.1,39.4,73.3,39.3h-1l-0.4.8c-3.7,6.7-4.5,14.8-4.5,15l3,0.3a41.1,41.1,0,0,1,3.7-13.1c4.1,0.6,20.5,3.7,39.1,19.6h0.1Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path><ellipse cx="75.4" cy="35.4" rx="3.2" ry="3.1" style="fill:#010101"></ellipse><ellipse cx="83.7" cy="37.4" rx="3.1" ry="3" style="fill:#010101"></ellipse><ellipse cx="91.4" cy="40.3" rx="2.8" ry="2.7" style="fill:#010101"></ellipse><ellipse cx="63.5" cy="41.7" rx="2.8" ry="2.7" style="fill:#010101"></ellipse><ellipse cx="98.2" cy="43.6" rx="2.6" ry="2.5" style="fill:#010101"></ellipse><ellipse cx="104.9" cy="47.8" rx="2.4" ry="2.3" style="fill:#010101"></ellipse><ellipse cx="63.2" cy="47.9" rx="2.4" ry="2.3" style="fill:#010101"></ellipse><ellipse cx="110.9" cy="52.3" rx="2.2" ry="2.1" style="fill:#010101"></ellipse><ellipse cx="115.6" cy="56.8" rx="2" ry="1.9" style="fill:#010101"></ellipse><ellipse cx="63.2" cy="52.7" rx="2" ry="1.9" style="fill:#010101"></ellipse><path d="M57.1,76.2a0.4,0.4,0,1,1-.4-0.5A0.4,0.4,0,0,1,57.1,76.2Z" transform="translate(-0.7 -0.7)" style="fill:#010101;fill-opacity:0"></path><path d="M64,57.9c-5.8,0-5.4,2.6-5.4,2.6v2.7h5.5v0.8H56.4s-3.7-.4-3.7,5.7,3.2,5.9,3.2,5.9h1.9V72.8s-0.1-3.4,3.2-3.4h5.5a3,3,0,0,0,3.1-3.1V61.1S70,57.9,64,57.9h0Zm-3,1.8a1,1,0,0,1,1,1,1,1,0,1,1-2,0,1,1,0,0,1,1-1H61Zm3.2,21.8c5.8,0,5.4-2.6,5.4-2.6V76.3H64.1V75.5h7.7s3.7,0.4,3.7-5.7-3.2-5.9-3.2-5.9H70.3v2.8s0.1,3.4-3.2,3.4H61.7a3,3,0,0,0-3.1,3.1v5.2s-0.5,3.1,5.6,3.1h0Zm3-1.8a1,1,0,0,1-1-1,1,1,0,1,1,2,0,1,1,0,0,1-1,1H67.2Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path><path d="M64.1,21.8a8.5,8.5,0,1,0,8.5,8.5A8.5,8.5,0,0,0,64.1,21.8Zm-1.3,5.1a2.2,2.2,0,0,1,1.3.4,3.8,3.8,0,0,1,.7,1,5.3,5.3,0,0,1,.2,1.3,1.8,1.8,0,0,1-.1.7,1.9,1.9,0,0,1-.2.7l-0.4.6-0.7.4H62.4a1.4,1.4,0,0,1-1.3-.4v2.5H59.9V26.8h1.3v0.7a2,2,0,0,1,1.8-.8v0.2Zm3.1,0h1.4l1.2,3.6,1.2-3.6h1.2l-2,6.2a3.1,3.1,0,0,1-.7,1.2,1.7,1.7,0,0,1-1.3.5H66v-1h0.4a1.5,1.5,0,0,0,1.5-1.4Zm-3.7.8a1,1,0,0,0-.8.4,1.6,1.6,0,0,0-.3,1v0.7a1.6,1.6,0,0,0,.3,1,1,1,0,0,0,.9.4,1.2,1.2,0,0,0,1-.6,3,3,0,0,0,.4-1.3,3.2,3.2,0,0,0-.2-0.8,1.7,1.7,0,0,0-.4-0.7,1.2,1.2,0,0,0-.8-0.3H62.3Zm-4.3,3L58.6,31a0.8,0.8,0,0,1,0,1,0.5,0.5,0,0,1-.5.2L57.5,32a1.1,1.1,0,0,1-.2-0.5,0.5,0.5,0,0,1,.2-0.5,0.9,0.9,0,0,1,.6-0.2H58Z" transform="translate(-0.7 -0.7)" style="fill:#010101"></path></svg></div>
+          </div>
+          <div class="python red swot">
+            <div class="eye"></div>
+            <div class="glasses"></div>
+          </div>
+        </div>
+      </div>
+      <div class="container pt-1 pb-3 clearfix">
+        <p class="text-center">PyCon UK is a&nbsp;<a href="//2018.pyconuk.org/contact/" class="">volunteer-organised conference</a>, staged by and on behalf of the Python community in the UK.</p>
+
+        <p class="text-center">Hosting kindly donated by <a href="https://www.divio.com/en/" class="">Divio Cloud</a>.</p>
+      </div>
+    </footer>
   </body>
   <script src="{% static 'jquery-3.1.0/js/jquery.js' %}"></script>
   <script src="{% static 'jquery-plugins/js/jquery.formset.js' %}"></script>
@@ -67,8 +151,8 @@
   <script src="{% static 'bootstrap-plugins/bootstrap-datepicker/js/bootstrap-datepicker.js' %}"></script>
 
   <script>
-    {% block json_data %}
-    {% endblock %}
+  {% block json_data %}
+  {% endblock %}
   </script>
 
   {% for path in js_paths %}
