--- a/tickets/templates/tickets/_order_form.html
+++ b/tickets/templates/tickets/_order_form.html
@@ -78,7 +78,7 @@
           {% include 'tickets/_others_form.html' with form=others_formset.empty_form %}
         </script>
 
-        <input type="button" value="Add another" data-formset-add class="btn btn-default">
+        <input type="button" value="Add another" data-formset-add class="btn btn-primary">
       </div>
     </div>
   </div>
