--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -14,7 +14,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Reset my password</button>
+      <button type="submit" class="btn btn-primary">Reset my password</button>
     </div>
   </div>
 </form>
