--- a/tickets/templates/tickets/_others_form.html
+++ b/tickets/templates/tickets/_others_form.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col-xs-1">
       <div class="hidden">{{ form.DELETE }}</div>
-      <button type="button" data-formset-delete-button class="btn btn-default">&times;</button>
+      <button type="button" data-formset-delete-button class="btn btn-primary">&times;</button>
     </div>
   </div>
 </div>
