--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col">
             {% block content %}
             {% endblock %}
           </div>
