--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -12,26 +12,26 @@
 {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}" class="form-horizontal">
+<form method="post" action="{% url 'login' %}">
   {% csrf_token %}
   <input type="hidden" name="next" value="{{ next }}" />
 
-  <div class="form-group">
-    <label for="{{ form.username.auto_id }}" class="col-sm-2 control-label">{{ form.username.label }}</label>
+  <div class="form-group row">
+    <label for="{{ form.username.auto_id }}" class="col-sm-2  col-form-label">{{ form.username.label }}</label>
     <div class="col-sm-10">
       {{ form.username }}
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="{{ form.password.auto_id }}" class="col-sm-2 control-label">{{ form.password.label }}</label>
+  <div class="form-group row">
+    <label for="{{ form.password.auto_id }}" class="col-sm-2  col-form-label">{{ form.password.label }}</label>
     <div class="col-sm-10">
       {{ form.password }}
     </div>
   </div>
 
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
+  <div class="form-group row">
+    <div class="offset-sm-2 col-sm-10">
       <button type="submit" class="btn btn-primary">Sign in</button>
     </div>
   </div>
