Change HQ references to Registration Office

--- a/accounts/templates/registration/password_reset_email.html
+++ b/accounts/templates/registration/password_reset_email.html
@@ -1,4 +1,4 @@
-You're receiving this email because you requested a password reset for your user account at PyCon UK HQ.
+You're receiving this email because you requested a password reset for your user account at the PyCon UK Registration Office.
 
 Please go to the following page and choose a new password:
 
