--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -25,7 +25,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}" />
-  <title>{{ title|default:"PyCon UK 2018 HQ" }}</title>
+  <title>{{ title|default:"PyCon UK 2018 Registration Office" }}</title>
   </head>
   <body>
 
