--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -5,9 +5,9 @@
 <p>Hello, {{ request.user.name }}</p>
 {% endif %}
 
-<p>Welcome to the PyCon UK 2018 conference HQ.</p>
+<p>Welcome to the PyCon UK 2018 conference registration office.</p>
 
-<p>The conference takes place at <a href="http://2018.pyconuk.org/venue/">Cardiff City Hall</a> Saturday 15th to Wednesday 19th September.  You can find out more about the conference <a href="http://2018.pyconuk.org/">on our website</a>.</p>
+<p>The conference takes place at <a href="http://2018.pyconuk.org/venue/">Cardiff City Hall</a> from Saturday 15th to Wednesday 19th September.  You can find out more about the conference <a href="https://2018.pyconuk.org/">on our website</a>.</p>
 
 {% if ticket %}
 <p>You have a ticket for {{ ticket.details.days }}.</p>
