--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -10,7 +10,7 @@
 <p>The conference takes place at <a href="http://2018.pyconuk.org/venue/">Cardiff City Hall</a> from Saturday 15th to Wednesday 19th September.  You can find out more about the conference <a href="https://2018.pyconuk.org/">on our website</a>.</p>
 
 {% if ticket %}
-<p>You have a ticket for {{ ticket.details.days }}.</p>
+<p>You have a ticket for {{ ticket.days_sentence }}.</p>
 {% endif %}
 
 <p>Here, you can:</p>
