--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -1,145 +1,177 @@
 {% extends 'ironcage/base.html' %}
 
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 
 {% block content %}
 <div class="row">
-  <div class="col-md-8">
+  <div class="col">
     <form method="post">
       {% csrf_token %}
-      <div>
-        <h3>Basic information</h3>
-        <table class="table">
-          <tr>
-            <th class="col-md-4">Name (this will appear on your conference badge)</th>
-            <td>{% bootstrap_field form.name layout='inline' %}</td>
-          </tr>
-          <tr>
-            <th class="col-md-4">Email address</th>
-            <td>{% bootstrap_field form.email_addr layout='inline' %}</td>
-          </tr>
-        </table>
+
+      <div class="card">
+        <div class="card-header">Basic information</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4">
+              <label>Name (this will appear on your conference badge)</label>
+            </div>
+            <div class="col-8">
+              {% bootstrap_field form.name layout='inline' %}
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-4">
+              <label>Email address</label>
+            </div>
+            <div class="col-8">
+              {% bootstrap_field form.email_addr layout='inline' %}
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <h3>Requirements</h3>
-        <table class="table">
-          <tr>
-            <th class="col-md-4">Do you have any accessibility requirements?</th>
-            <td>
-              <div class="btn-group" data-toggle="buttons">
-                <label class="btn btn-primary{% if form.accessibility_reqs_yn.value == True %} active{% endif %}">
+      <div class="card">
+        <div class="card-header">Requirements</div>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4">
+              <label>Do you have any accessibility requirements?</label>
+            </div>
+            <div class="col-8">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light{% if form.accessibility_reqs_yn.value == True %} active{% endif %}">
                   <input type="radio" name="accessibility_reqs_yn" value="2" {% if form.accessibility_reqs_yn.value == True %} checked{% endif %}>Yes
                 </label>
-                <label class="btn btn-primary{% if form.accessibility_reqs_yn.value == False %} active{% endif %}">
+                <label class="btn btn-light{% if form.accessibility_reqs_yn.value == False %} active{% endif %}">
                   <input type="radio" name="accessibility_reqs_yn" value="3" {% if form.accessibility_reqs_yn.value == False %} checked{% endif %}>No
                 </label>
               </div>
               {% bootstrap_field form.accessibility_reqs layout='inline' placeholder='Please tell us more' %}
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">Do you have any childcare requirements?</th>
-            <td>
-              <div class="btn-group" data-toggle="buttons">
-                <label class="btn btn-primary{% if form.childcare_reqs_yn.value == True %} active{% endif %}">
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-4">
+              <label>Do you have any childcare requirements?</label>
+            </div>
+            <div class="col-8">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light{% if form.childcare_reqs_yn.value == True %} active{% endif %}">
                   <input type="radio" name="childcare_reqs_yn" value="2" {% if form.childcare_reqs_yn.value == True %} checked{% endif %}>Yes
                 </label>
-                <label class="btn btn-primary{% if form.childcare_reqs_yn.value == False %} active{% endif %}">
+                <label class="btn btn-light{% if form.childcare_reqs_yn.value == False %} active{% endif %}">
                   <input type="radio" name="childcare_reqs_yn" value="3" {% if form.childcare_reqs_yn.value == False %} checked{% endif %}>No
                 </label>
               </div>
               {% bootstrap_field form.childcare_reqs layout='inline' placeholder='Please tell us more' %}
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">Do you have any dietary requirements?</th>
-            <td>
-              <div class="btn-group" data-toggle="buttons">
-                <label class="btn btn-primary{% if form.dietary_reqs_yn.value == True %} active{% endif %}">
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-4">
+              <label>Do you have any dietary requirements?</label>
+            </div>
+            <div class="col-8">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light{% if form.dietary_reqs_yn.value == True %} active{% endif %}">
                   <input type="radio" name="dietary_reqs_yn" value="2" {% if form.dietary_reqs_yn.value == True %} checked{% endif %}>Yes
                 </label>
-                <label class="btn btn-primary{% if form.dietary_reqs_yn.value == False %} active{% endif %}">
+                <label class="btn btn-light{% if form.dietary_reqs_yn.value == False %} active{% endif %}">
                   <input type="radio" name="dietary_reqs_yn" value="3" {% if form.dietary_reqs_yn.value == False %} checked{% endif %}>No
                 </label>
               </div>
               {% bootstrap_field form.dietary_reqs layout='inline' placeholder='Please tell us more' %}
-            </td>
-          </tr>
-        </table>
+            </div>
+          </div>
+        </div>
       </div>
 
       {% if user.get_ticket is not None %}
-      <div>
-        <h3>UK Python Association (UKPA)</h3>
-        <p>You can read more details about the UKPA and becoming a member on the <a href="http://2017.pyconuk.org/ukpa/">conference website</a></p>
-        <table class="table">
-          <tr>
-            <th class="col-md-4">Do you wish to become a member of the UKPA?</th>
-            <td>
-              <div class="btn-group" data-toggle="buttons">
-                <label class="btn btn-primary{% if form.is_ukpa_member.value == True %} active{% endif %}">
+      <div class="card">
+        <div class="card-header">UK Python Association (UKPA)</div>
+        <div class="card-body">
+          <p>You can read more details about the UKPA and becoming a member on the <a href="http://2017.pyconuk.org/ukpa/">conference website</a></p>
+          <div class="row">
+            <div class="col-4">
+              <label>Do you wish to become a member of the UKPA?</label>
+            </div>
+            <div class="col-8">
+              <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-light{% if form.is_ukpa_member.value == True %} active{% endif %}">
                   <input type="radio" name="is_ukpa_member" value="2" {% if form.is_ukpa_member.value == True %} checked{% endif %}>Yes
                 </label>
-                <label class="btn btn-primary{% if form.is_ukpa_member.value == False %} active{% endif %}">
+                <label class="btn btn-light{% if form.is_ukpa_member.value == False %} active{% endif %}">
                   <input type="radio" name="is_ukpa_member" value="3" {% if form.is_ukpa_member.value == False %} checked{% endif %}>No
                 </label>
               </div>
-            </td>
-          </tr>
-        </table>
+            </div>
+          </div>
+        </div>
       </div>
       {% endif %}
 
-      <div>
-        <h3>Demographics</h3>
-
-        <p>All fields are optional, and if you'd prefer not to share this information with us, just click "Don't ask me about this" below.</p>
-
-        <!-- TODO: reinstate -->
-        <!-- <p><a href="">Why do we collect this information?</a></p> -->
-
-        <table class="table">
-          <tr>
-            <th class="col-md-4">Don't ask me about this</th>
-            <td><input type="checkbox" name="dont_ask_demographics" id="id_dont_ask_demographics"{% if form.dont_ask_demographics.value == True %} checked{% endif %} /></td>
-          </tr>
-          <tr class="demographics-field">
-            <th class="col-md-4">Year of birth</th>
-            <td>{% bootstrap_field form.year_of_birth layout='inline' %}</td>
-          </tr>
-          <tr class="demographics-field">
-            <th class="col-md-4">Gender</th>
-            <td>
+      <div class="card">
+        <div class="card-header">Demographics</div>
+        <div class="card-body">
+          <p>All fields are optional, and if you'd prefer not to share this information with us, just click "Don't ask me about this" below.</p>
+          <div class="row">
+            <div class="col-4">
+              <label>Don't ask me about this</label>
+            </div>
+            <div class="col-8">
+              <input type="checkbox" name="dont_ask_demographics" id="id_dont_ask_demographics"{% if form.dont_ask_demographics.value == True %} checked{% endif %} />
+            </div>
+          </div>
+          <hr class="demographics-field">
+          <div class="row demographics-field">
+            <div class="col-4">
+              <label>Year of birth</label>
+            </div>
+            <div class="col-8">
+              {% bootstrap_field form.year_of_birth layout='inline' %}
+            </div>
+          </div>
+          <hr class="demographics-field">
+          <div class="row demographics-field">
+            <div class="col-4">
+              <label>Gender</label>
+            </div>
+            <div class="col-8">
               {% bootstrap_field form.gender layout='inline' %}
               <input type="text" maxlength="100" class="form-control" placeholder="Please specify" id="id_gender_free_text" />
-            </td>
-          </tr>
-          <tr class="demographics-field">
-            <th class="col-md-4">Ethnicity</th>
-            <td>
+            </div>
+          </div>
+          <hr class="demographics-field">
+          <div class="row demographics-field">
+            <div class="col-4">
+              <label>Ethnicity</label>
+            </div>
+            <div class="col-8">
               {% bootstrap_field form.ethnicity layout='inline' %}
               {% bootstrap_field form.ethnicity_free_text layout='inline' %}
-            </td>
-          </tr>
-          <tr class="demographics-field">
-            <th class="col-md-4">Nationality</th>
-            <td>
+            </div>
+          </div>
+          <hr class="demographics-field">
+          <div class="row demographics-field">
+            <div class="col-4">
+              <label>Nationality</label>
+            </div>
+            <div class="col-8">
               {% bootstrap_field form.nationality layout='inline' %}
               <input type="text" maxlength="100" class="form-control" placeholder="Please specify" id="id_nationality_free_text" />
-            </td>
-          </tr>
-          <tr class="demographics-field">
-            <th class="col-md-4">Country of residence</th>
-            <td>
+            </div>
+          </div>
+          <hr class="demographics-field">
+          <div class="row demographics-field">
+            <div class="col-4">
+              <label>Country of residence</label>
+            </div>
+            <div class="col-8">
               {% bootstrap_field form.country_of_residence layout='inline' %}
               <input type="text" maxlength="100" class="form-control" placeholder="Please specify" id="id_country_of_residence_free_text" />
-            </td>
-          </tr>
-        </table>
-      </div>
+            </div>
+          </div>
 
       <button type="submit" class="btn btn-primary">Update my profile</button>
     </form>
