--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,7 +5,7 @@
   <div class="col-md-8">
     {% include './_profile_details.html' %}
 
-    <a href="{% url 'accounts:edit_profile' %}" type="button" class="btn btn-primary">Update my profile</a>
+    <a href="{% url 'accounts:edit_profile' %}" role="button" class="btn btn-primary">Update my profile</a>
   </div>
 </div>
 {% endblock %}
