--- a/tickets/templates/tickets/_order_details.html
+++ b/tickets/templates/tickets/_order_details.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-8">
     <table class="table table-condensed">
       <tr>
         <th>Date</th>
@@ -32,7 +32,7 @@
 </div>
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-8">
     <h3>Ticket details</h3>
 
     <table class="table table-condensed">
