--- a/tickets/templates/tickets/order_receipt.html
+++ b/tickets/templates/tickets/order_receipt.html
@@ -14,7 +14,7 @@
 <p>{{ order.num_tickets }} ticket{{ order.num_tickets|pluralize }} for PyCon UK 2018</p>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-6">
     <table class="table table-condensed">
       <tr>
         <th>Date</th>
