Remove inline CSS

--- a/ironcage/templates/ironcage/base.html
+++ b/ironcage/templates/ironcage/base.html
@@ -6,28 +6,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}" /> -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.0.0/css/bootstrap.min.css' %}" />
   <link rel="stylesheet" href="http://2018.pyconuk.org/static/css/pyconuk.css">
   <link rel="stylesheet" href="{% static 'tickets/tickets.css' %}" />
-
-  <style media="screen">
-
-  .card {
-    margin-bottom: 20px;
-  }
-  form label {
-    font-weight: bold;
-  }
-  form label.btn {
-    font-weight: normal;
-  }
-
-  .field-name {
-    font-weight: bold;
-  }
-  </style>
-
+  <link rel="stylesheet" href="{% static 'ironcage/ironcage.css' %}" />
 
   <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-plugins/bootstrap-datepicker/css/bootstrap-datepicker3.css' %}" />
   <title>{{ title|default:"PyCon UK 2018 Registration Office" }}</title>
@@ -143,7 +125,7 @@
   </body>
   <script src="{% static 'jquery-3.1.0/js/jquery.js' %}"></script>
   <script src="{% static 'jquery-plugins/js/jquery.formset.js' %}"></script>
-  <script src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+  <script src="{% static 'bootstrap-4.0.0/js/bootstrap.min.js' %}"></script>
   <script src="{% static 'bootstrap-plugins/bootstrap-datepicker/js/bootstrap-datepicker.js' %}"></script>
 
   <script>
