Add GB- to our VAT number to keep Brussels happy

--- a/tickets/templates/tickets/order_receipt.html
+++ b/tickets/templates/tickets/order_receipt.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Receipt for PyCon UK 2018 order {{ order.order_id }}</h1>
 
-<p>Issued by the PyCon UK Society Ltd, c/o Acconomy, Arena Business Centre, Holyrood Close, Poole, BH17 7FJ, United Kingdom (VAT Number 249244982)</p>
+<p>Issued by the PyCon UK Society Ltd, c/o Acconomy, Arena Business Centre, Holyrood Close, Poole, BH17 7FJ, United Kingdom (VAT Number GB-249244982)</p>
 
 <p>Issued to {{ order.purchaser.name }}, {{ order.billing_name }}, {{ order.billing_addr_formatted }}</p>
 
