--- a/tickets/templates/tickets/order.html
+++ b/tickets/templates/tickets/order.html
@@ -15,7 +15,7 @@
 
 {% if order.payment_required %}
 <div id="stripe-form">
-  <form action="{% url 'tickets:order_payment' order_id=order.order_id %}" method="POST">
+  <form action="{% url 'orders:order_payment' order_id=order.order_id %}" method="POST">
     {% csrf_token %}
     <script
       src="https://checkout.stripe.com/checkout.js" class="stripe-button"
@@ -40,7 +40,7 @@
 {% elif not order.status == 'errored' %}
 <div class="row">
   <div class="col-md-6">
-    <a href="{% url 'tickets:order_receipt' order.order_id %}" class="btn btn-primary">View receipt</a>
+    <a href="{% url 'orders:order_receipt' order.order_id %}" class="btn btn-primary">View receipt</a>
     {% if ticket %}
     <a href="{% url 'tickets:ticket' ticket.ticket_id %}" class="btn btn-primary">View your ticket</a>
     {% endif %}
