Missed some close divs

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -172,6 +172,8 @@
               <input type="text" maxlength="100" class="form-control" placeholder="Please specify" id="id_country_of_residence_free_text" />
             </div>
           </div>
+        </div>
+      </div>
 
       <button type="submit" class="btn btn-primary">Update my profile</button>
     </form>
