Move templates from tickets to orders

--- a/reports/templates/reports/order.html
+++ b/reports/templates/reports/order.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h1>Order {{ order.order_id }}</h1>
 
-{% include 'tickets/_order_details.html' %}
+{% include 'orders/_order_details.html' %}
 {% endblock %}
