--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -16,6 +16,14 @@
   </div>
 
   <div class="form-group row">
+    <label for="{{ form.last_name.auto_id }}" class="col-sm-2 col-form-label">{{ form.last_name.label }}</label>
+    <div class="col-sm-10">
+      {{ form.last_name }} <small class="form-text text-muted">Optional</small>
+    </div>
+
+  </div>
+
+  <div class="form-group row">
     <label for="{{ form.email_addr.auto_id }}" class="col-sm-2 col-form-label">{{ form.email_addr.label }}</label>
     <div class="col-sm-10">
       {{ form.email_addr }}
