Use first_name instead of name for first name

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -17,7 +17,7 @@
               <small class="form-text text-muted">This will appear on your conference badge</small>
             </div>
             <div class="col-8">
-              {% bootstrap_field form.name layout='inline' %}
+              {% bootstrap_field form.first_name layout='inline' %}
             </div>
           </div>
           <hr>
