--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -9,9 +9,9 @@
   <input type="hidden" name="next" value="{{ next }}" />
 
   <div class="form-group row">
-    <label for="{{ form.name.auto_id }}" class="col-sm-2 col-form-label">{{ form.name.label }}</label>
+    <label for="{{ form.first_name.auto_id }}" class="col-sm-2 col-form-label">{{ form.first_name.label }}</label>
     <div class="col-sm-10">
-      {{ form.name }}
+      {{ form.first_name }}
     </div>
   </div>
 
