--- a/tickets/templates/tickets/_ticket_details.html
+++ b/tickets/templates/tickets/_ticket_details.html
@@ -1,7 +1,7 @@
 <table class="table">
   <tr>
     <th>Ticket holder</th>
-    <td>{{ ticket.owner.name }}</td>
+    <td>{{ ticket.owner.get_full_name }}</td>
   </tr>
   <tr>
     <th>Days</th>
