Revert "Extra account details"

--- a/accounts/templates/accounts/_profile_details.html
+++ b/accounts/templates/accounts/_profile_details.html
@@ -6,7 +6,7 @@
         Name
       </div>
       <div class="col-4">
-        {{ user.first_name }} {{ user.last_name }}
+        {{ user.name }}
       </div>
     </div>
     <hr>
