--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -9,18 +9,10 @@
   <input type="hidden" name="next" value="{{ next }}" />
 
   <div class="form-group row">
-    <label for="{{ form.first_name.auto_id }}" class="col-sm-2 col-form-label">{{ form.first_name.label }}</label>
+    <label for="{{ form.name.auto_id }}" class="col-sm-2 col-form-label">{{ form.name.label }}</label>
     <div class="col-sm-10">
-      {{ form.first_name }}
+      {{ form.name }}
     </div>
-  </div>
-
-  <div class="form-group row">
-    <label for="{{ form.last_name.auto_id }}" class="col-sm-2 col-form-label">{{ form.last_name.label }}</label>
-    <div class="col-sm-10">
-      {{ form.last_name }} <small class="form-text text-muted">Optional</small>
-    </div>
-
   </div>
 
   <div class="form-group row">
