Fix link and word

--- a/cfp/templates/cfp/new_proposal.html
+++ b/cfp/templates/cfp/new_proposal.html
@@ -9,7 +9,7 @@
     <hr />
     <p>PyCon UK is a community conference, and we're looking for proposals of all sorts for talks, workshops, posters — or anything else — from all parts of the community.</p>
 
-    <p><a href="https://2018.pyconuk.org/cfp/">Read more about our Call for Participation</a>.</p>
+    <p><a href="https://2018.pyconuk.org/call-proposals/">Read more about our Call for Participation</a>.</p>
 
     <p>The Call for Participation will close at 1200 BST on June 15th.</p>
     <hr />
