--- a/grants/templates/grants/application_edit.html
+++ b/grants/templates/grants/application_edit.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-lg-8 offset-lg-2 col-sm-12">
     <h1>Update your application</h1>
-    <hr />
+    <hr>
     {% include './_application_form.html' %}
   </div>
 </div>
