--- a/grants/templates/grants/application.html
+++ b/grants/templates/grants/application.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <h3>Your application for financial assistance</h3>
-    <hr />
+  <div class="col-lg-8 offset-lg-2 col-sm-12">
+    <h1>Your application for financial assistance</h1>
+    <hr>
 
     {% include './_application_details.html' %}
 
